--- a/index.html
+++ b/index.html
@@ -158,34 +158,34 @@
       </div>
     </div>
   </header><!-- Hero Section -->
-  <section class="hero-bg text-white py-20 relative overflow-hidden">
-   <div class="container mx-auto px-4 flex items-center justify-between">
-    <div class="w-1/2 pr-8">
-     <h2 class="text-5xl font-bold mb-6" style="font-family: 'Poppins', sans-serif;">Adu magia Crăciunului la tine acasă</h2>
-     <p class="text-xl mb-8 opacity-90" style="font-family: 'Open Sans', sans-serif;">Creează amintiri de neuitat cu cel mai autentic Moș Crăciun din România. Experiență magică garantată pentru copii și adulți.</p><button class="bg-white text-red-800 px-8 py-4 rounded-full text-lg font-semibold hover:bg-gray-100 transition transform hover:scale-105"> 🎁 Rezervă vizita lui Moș Crăciun </button>
+  <section class="hero-bg text-white py-12 md:py-20 relative overflow-hidden">
+   <div class="container mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-8">
+    <div class="w-full md:w-1/2 md:pr-8 mb-8 md:mb-0">
+     <h2 class="text-2xl sm:text-3xl md:text-5xl font-bold mb-4 md:mb-6" style="font-family: 'Poppins', sans-serif;">Adu magia Crăciunului la tine acasă</h2>
+     <p class="text-base sm:text-lg md:text-xl mb-6 md:mb-8 opacity-90" style="font-family: 'Open Sans', sans-serif;">Creează amintiri de neuitat cu cel mai autentic Moș Crăciun din România. Experiență magică garantată pentru copii și adulți.</p><button class="bg-white text-red-800 px-8 py-4 rounded-full text-lg font-semibold hover:bg-gray-100 transition transform hover:scale-105"> 🎁 Rezervă vizita lui Moș Crăciun </button>
     </div>
-    <div class="w-1/2 flex justify-center">
-     <div class="w-80 h-80 bg-white bg-opacity-20 rounded-full flex items-center justify-center"><span class="text-9xl">🎅</span>
+    <div class="w-full md:w-1/2 flex justify-center">
+     <div class="w-48 h-48 sm:w-64 sm:h-64 md:w-80 md:h-80 bg-white bg-opacity-20 rounded-full flex items-center justify-center"><span class="text-6xl sm:text-7xl md:text-9xl">🎅</span>
      </div>
     </div>
    </div>
   </section><!-- Services Section -->
   <section class="py-16 bg-gray-50">
    <div class="container mx-auto px-4">
-    <h3 class="text-4xl font-bold text-center mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Serviciile noastre magice</h3>
+    <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Serviciile noastre magice</h3>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-     <div class="service-card bg-white p-6 rounded-xl shadow-lg" onclick="openModal('modal1')">
-      <div class="text-4xl mb-4 text-center">
+     <div class="service-card bg-white p-4 sm:p-6 rounded-xl shadow-lg" onclick="openModal('modal1')">
+      <div class="text-3xl sm:text-4xl mb-3 sm:mb-4 text-center">
        🏠
       </div>
-      <h4 class="text-xl font-semibold mb-2 text-center">Vizită la domiciliu</h4>
+      <h4 class="text-lg sm:text-xl font-semibold mb-1 sm:mb-2 text-center">Vizită la domiciliu</h4>
       <p class="text-gray-600 text-center">Moș Crăciun vine direct la tine acasă</p>
      </div>
-     <div class="service-card bg-white p-6 rounded-xl shadow-lg" onclick="openModal('modal2')">
-      <div class="text-4xl mb-4 text-center">
+     <div class="service-card bg-white p-4 sm:p-6 rounded-xl shadow-lg" onclick="openModal('modal2')">
+      <div class="text-3xl sm:text-4xl mb-3 sm:mb-4 text-center">
        🏫
       </div>
-      <h4 class="text-xl font-semibold mb-2 text-center">Moș Crăciun la grădinițe</h4>
+      <h4 class="text-lg sm:text-xl font-semibold mb-1 sm:mb-2 text-center">Moș Crăciun la grădinițe</h4>
       <p class="text-gray-600 text-center">Spectacol magic pentru cei mici</p>
      </div>
     </div>
@@ -193,73 +193,73 @@
   </section><!-- Benefits Section -->
   <section class="py-16 bg-white">
    <div class="container mx-auto px-4">
-    <h3 class="text-4xl font-bold text-center mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">De ce să alegi Moș Crăciunul nostru?</h3>
+    <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">De ce să alegi Moș Crăciunul nostru?</h3>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
      <div class="text-center">
-      <div class="text-5xl mb-4">
+      <div class="text-3xl sm:text-4xl md:text-5xl mb-3 sm:mb-4">
        🎁
       </div>
-      <h4 class="text-lg font-semibold mb-2">Costum autentic</h4>
+      <h4 class="text-sm sm:text-base md:text-lg font-semibold mb-1 sm:mb-2">Costum autentic</h4>
       <p class="text-gray-600">Personaj carismatic și costum de calitate superioară</p>
      </div>
      <div class="text-center">
-      <div class="text-5xl mb-4">
+      <div class="text-3xl sm:text-4xl md:text-5xl mb-3 sm:mb-4">
        🌟
       </div>
-      <h4 class="text-lg font-semibold mb-2">Experiență vastă</h4>
+      <h4 class="text-sm sm:text-base md:text-lg font-semibold mb-1 sm:mb-2">Experiență vastă</h4>
       <p class="text-gray-600">Peste 10 ani de experiență cu copii de toate vârstele</p>
      </div>
      <div class="text-center">
-      <div class="text-5xl mb-4">
+      <div class="text-3xl sm:text-4xl md:text-5xl mb-3 sm:mb-4">
        🎅
       </div>
-      <h4 class="text-lg font-semibold mb-2">Momente magice</h4>
+      <h4 class="text-sm sm:text-base md:text-lg font-semibold mb-1 sm:mb-2">Momente magice</h4>
       <p class="text-gray-600">Povestiri captivante și fotografii memorabile</p>
      </div>
      <div class="text-center">
-      <div class="text-5xl mb-4">
+      <div class="text-3xl sm:text-4xl md:text-5xl mb-3 sm:mb-4">
        💫
       </div>
-      <h4 class="text-lg font-semibold mb-2">Flexibilitate totală</h4>
+      <h4 class="text-sm sm:text-base md:text-lg font-semibold mb-1 sm:mb-2">Flexibilitate totală</h4>
       <p class="text-gray-600">Adaptabil pentru orice tip de eveniment</p>
      </div>
     </div>
    </div>
   </section><!-- About Section -->
-  <section class="py-16" style="background: linear-gradient(135deg, #8b0000 0%, #ffffff 100%);">
+  <section class="py-12 md:py-16" style="background: linear-gradient(135deg, #8b0000 0%, #ffffff 100%);">
    <div class="container mx-auto px-4 flex items-center">
-    <div class="w-1/2 pr-8">
-     <div class="w-80 h-80 bg-white bg-opacity-20 rounded-full flex items-center justify-center mx-auto"><span class="text-9xl">🎅</span>
+    <div class="w-full md:w-1/2 md:pr-8 mb-8 md:mb-0">
+     <div class="w-80 h-80 bg-white bg-opacity-20 rounded-full flex items-center justify-center mx-auto"><span class="text-6xl sm:text-7xl md:text-9xl">🎅</span>
      </div>
     </div>
-    <div class="w-1/2 text-white">
+    <div class="w-full md:w-1/2 text-white text-center md:text-left">
      <h3 class="text-4xl font-bold mb-6" style="font-family: 'Poppins', sans-serif;">Despre Moș Crăciun</h3>
      <p class="text-lg mb-6 leading-relaxed" style="font-family: 'Open Sans', sans-serif;">Cu peste un deceniu de experiență în aducerea bucuriei de Crăciun în casele românilor, sunt dedicat să creez momente magice și amintiri de neuitat pentru copii și familii. Fiecare vizită este o aventură unică, plină de povești captivante, râsete și surprize.</p>
-     <p class="text-lg leading-relaxed" style="font-family: 'Open Sans', sans-serif;">Cred că spiritul Crăciunului trăiește în fiecare zâmbet de copil și în fiecare moment de fericire împărtășit în familie. Să aducem împreună magia Crăciunului la tine acasă!</p>
+     <p class="text-base sm:text-lg leading-relaxed" style="font-family: 'Open Sans', sans-serif;">Cred că spiritul Crăciunului trăiește în fiecare zâmbet de copil și în fiecare moment de fericire împărtășit în familie. Să aducem împreună magia Crăciunului la tine acasă!</p>
     </div>
    </div>
   </section><!-- Reviews Section -->
   <section class="py-16 bg-gray-50">
    <div class="container mx-auto px-4">
-    <h3 class="text-4xl font-bold text-center mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Ce spun părinții și organizatorii</h3>
+    <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Ce spun părinții și organizatorii</h3>
     <div class="review-slider">
      <div class="review-track" id="reviewTrack">
-      <div class="bg-white p-6 rounded-xl shadow-lg mx-4 min-w-80">
+      <div class="bg-white p-4 sm:p-6 rounded-xl shadow-lg mx-2 sm:mx-4 min-w-64 sm:min-w-72 md:min-w-80">
        <div class="flex mb-4"><span class="text-red-500">★★★★★</span>
        </div>
-       <p class="text-gray-600 mb-4">"O experiență absolut magică! Copiii au fost încântați și nu se mai satură să povestească despre vizita lui Moș Crăciun."</p>
+       <p class="text-gray-600 text-sm sm:text-base mb-3 sm:mb-4">"O experiență absolut magică! Copiii au fost încântați și nu se mai satură să povestească despre vizita lui Moș Crăciun."</p>
        <p class="font-semibold">- Maria Popescu</p>
       </div>
-      <div class="bg-white p-6 rounded-xl shadow-lg mx-4 min-w-80">
+      <div class="bg-white p-4 sm:p-6 rounded-xl shadow-lg mx-2 sm:mx-4 min-w-64 sm:min-w-72 md:min-w-80">
        <div class="flex mb-4"><span class="text-red-500">★★★★★</span>
        </div>
-       <p class="text-gray-600 mb-4">"Profesionalism de top! A reușit să capteze atenția a 30 de copii timp de o oră întreagă. Recomand cu încredere!"</p>
+       <p class="text-gray-600 text-sm sm:text-base mb-3 sm:mb-4">"Profesionalism de top! A reușit să capteze atenția a 30 de copii timp de o oră întreagă. Recomand cu încredere!"</p>
        <p class="font-semibold">- Grădinița Floarea Soarelui</p>
       </div>
-      <div class="bg-white p-6 rounded-xl shadow-lg mx-4 min-w-80">
+      <div class="bg-white p-4 sm:p-6 rounded-xl shadow-lg mx-2 sm:mx-4 min-w-64 sm:min-w-72 md:min-w-80">
        <div class="flex mb-4"><span class="text-red-500">★★★★★</span>
        </div>
-       <p class="text-gray-600 mb-4">"Chiar și adulții au fost impresionați! Un Moș Crăciun autentic care știe să creeze atmosfera perfectă."</p>
+       <p class="text-gray-600 text-sm sm:text-base mb-3 sm:mb-4">"Chiar și adulții au fost impresionați! Un Moș Crăciun autentic care știe să creeze atmosfera perfectă."</p>
        <p class="font-semibold">- Alexandru Ionescu</p>
       </div>
      </div>
@@ -268,11 +268,11 @@
   </section><!-- FAQ Section -->
   <section class="py-16 bg-white">
    <div class="container mx-auto px-4">
-    <h3 class="text-4xl font-bold text-center mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Întrebări frecvente</h3>
+    <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Întrebări frecvente</h3>
     <div class="max-w-3xl mx-auto space-y-4">
      <div class="faq-item border border-gray-200 rounded-lg p-4" onclick="toggleFAQ(this)">
       <div class="flex justify-between items-center">
-       <h4 class="text-lg font-semibold">Cât durează o vizită?</h4><span class="text-2xl">+</span>
+       <h4 class="text-base md:text-lg font-semibold">Cât durează o vizită?</h4><span class="text-2xl">+</span>
       </div>
       <div class="faq-answer mt-4">
        <p class="text-gray-600">O vizită standard durează între 30-45 de minute, dar poate fi adaptată în funcție de nevoile dumneavoastră și numărul de copii.</p>
@@ -280,7 +280,7 @@
      </div>
      <div class="faq-item border border-gray-200 rounded-lg p-4" onclick="toggleFAQ(this)">
       <div class="flex justify-between items-center">
-       <h4 class="text-lg font-semibold">Ce conține pachetul standard?</h4><span class="text-2xl">+</span>
+       <h4 class="text-base md:text-lg font-semibold">Ce conține pachetul standard?</h4><span class="text-2xl">+</span>
       </div>
       <div class="faq-answer mt-4">
        <p class="text-gray-600">Pachetul include: costum complet de Moș Crăciun, sac cu daruri, povești și poezii personalizate, sesiune foto și interacțiune cu copiii.</p>
@@ -288,7 +288,7 @@
      </div>
      <div class="faq-item border border-gray-200 rounded-lg p-4" onclick="toggleFAQ(this)">
       <div class="flex justify-between items-center">
-       <h4 class="text-lg font-semibold">Pot personaliza mesajul lui Moș Crăciun?</h4><span class="text-2xl">+</span>
+       <h4 class="text-base md:text-lg font-semibold">Pot personaliza mesajul lui Moș Crăciun?</h4><span class="text-2xl">+</span>
       </div>
       <div class="faq-answer mt-4">
        <p class="text-gray-600">Absolut! Puteți să-mi oferiți informații despre copii (nume, vârstă, comportament) pentru a personaliza complet experiența.</p>
@@ -296,7 +296,7 @@
      </div>
      <div class="faq-item border border-gray-200 rounded-lg p-4" onclick="toggleFAQ(this)">
       <div class="flex justify-between items-center">
-       <h4 class="text-lg font-semibold">Cum pot face o rezervare?</h4><span class="text-2xl">+</span>
+       <h4 class="text-base md:text-lg font-semibold">Cum pot face o rezervare?</h4><span class="text-2xl">+</span>
       </div>
       <div class="faq-answer mt-4">
        <p class="text-gray-600">Puteți suna la numărul de telefon din footer, trimite un email sau completa formularul de contact. Răspund în maximum 24 de ore.</p>
@@ -305,16 +305,16 @@
     </div>
    </div>
   </section><!-- Booking Calendar Section -->
-  <section class="py-16 bg-red-50">
+  <section class="py-12 md:py-16 bg-red-50">
    <div class="container mx-auto px-4">
-    <h3 class="text-4xl font-bold text-center mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Rezervă vizita lui Moș Crăciun</h3>
-    <div class="max-w-4xl mx-auto bg-white rounded-xl shadow-lg p-8">
+    <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Rezervă vizita lui Moș Crăciun</h3>
+    <div class="max-w-4xl mx-auto bg-white rounded-xl shadow-lg p-5 sm:p-6 md:p-8">
      <div class="grid grid-cols-1 lg:grid-cols-2 gap-8"><!-- Calendar -->
       <div>
-       <h4 class="text-xl font-semibold mb-4 text-gray-800">Alege data</h4>
+       <h4 class="text-base sm:text-lg md:text-xl font-semibold mb-3 sm:mb-4 text-gray-800">Alege data</h4>
        <div class="calendar-container">
         <div class="calendar-header flex justify-between items-center mb-4"><button onclick="previousMonth()" class="text-red-600 hover:text-red-800 text-xl font-bold">&lt;</button>
-         <h5 class="text-lg font-semibold" id="currentMonth"></h5><button onclick="nextMonth()" class="text-red-600 hover:text-red-800 text-xl font-bold">&gt;</button>
+         <h5 class="text-base md:text-lg font-semibold" id="currentMonth"></h5><button onclick="nextMonth()" class="text-red-600 hover:text-red-800 text-xl font-bold">&gt;</button>
         </div>
         <div class="calendar-grid grid grid-cols-7 gap-1 mb-4">
          <div class="text-center text-sm font-semibold text-gray-600 p-2">
@@ -342,13 +342,13 @@
         <div class="calendar-days grid grid-cols-7 gap-1" id="calendarDays"></div>
        </div><!-- Time Selection -->
        <div class="mt-6">
-        <h4 class="text-xl font-semibold mb-4 text-gray-800">Alege ora</h4>
+        <h4 class="text-base sm:text-lg md:text-xl font-semibold mb-3 sm:mb-4 text-gray-800">Alege ora</h4>
         <div class="grid grid-cols-3 gap-2" id="timeSlots"><button class="time-slot p-2 border border-gray-300 rounded-lg hover:bg-red-100 hover:border-red-300 transition" onclick="selectTime(this, '10:00')">10:00</button> <button class="time-slot p-2 border border-gray-300 rounded-lg hover:bg-red-100 hover:border-red-300 transition" onclick="selectTime(this, '11:00')">11:00</button> <button class="time-slot p-2 border border-gray-300 rounded-lg hover:bg-red-100 hover:border-red-300 transition" onclick="selectTime(this, '14:00')">14:00</button> <button class="time-slot p-2 border border-gray-300 rounded-lg hover:bg-red-100 hover:border-red-300 transition" onclick="selectTime(this, '15:00')">15:00</button> <button class="time-slot p-2 border border-gray-300 rounded-lg hover:bg-red-100 hover:border-red-300 transition" onclick="selectTime(this, '16:00')">16:00</button> <button class="time-slot p-2 border border-gray-300 rounded-lg hover:bg-red-100 hover:border-red-300 transition" onclick="selectTime(this, '17:00')">17:00</button>
         </div>
        </div>
       </div><!-- Booking Form -->
       <div>
-       <h4 class="text-xl font-semibold mb-4 text-gray-800">Detaliile rezervării</h4>
+       <h4 class="text-base sm:text-lg md:text-xl font-semibold mb-3 sm:mb-4 text-gray-800">Detaliile rezervării</h4>
        <form id="bookingForm" onsubmit="submitBooking(event)" class="space-y-4">
         <div><label for="selectedDate" class="block text-sm font-medium text-gray-700 mb-1">Data selectată</label> <input type="text" id="selectedDate" readonly class="w-full p-3 border border-gray-300 rounded-lg bg-gray-50" placeholder="Selectează o dată din calendar">
         </div>
@@ -377,18 +377,18 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
      <div>
       <div class="flex items-center space-x-2 mb-4"><span class="text-2xl">🎅</span>
-       <h4 class="text-xl font-bold">Moș Crăciun</h4>
+       <h4 class="text-lg sm:text-xl font-bold">Moș Crăciun</h4>
       </div>
       <p class="text-gray-300">Aducând magia Crăciunului în fiecare casă din România.</p>
      </div>
      <div>
-      <h4 class="text-lg font-semibold mb-4">Contact</h4>
-      <p class="text-gray-300 mb-2">📞 0722 123 456</p>
-      <p class="text-gray-300 mb-2">✉️ contact@moscrăciun.ro</p>
+      <h4 class="text-base sm:text-lg font-semibold mb-3 sm:mb-4">Contact</h4>
+      <p class="text-gray-300 mb-1 sm:mb-2 text-sm sm:text-base">📞 0722 123 456</p>
+      <p class="text-gray-300 mb-1 sm:mb-2 text-sm sm:text-base">✉️ contact@moscrăciun.ro</p>
       <p class="text-gray-300">📍 București, România</p>
      </div>
      <div>
-      <h4 class="text-lg font-semibold mb-4">Urmărește-ne</h4>
+      <h4 class="text-base sm:text-lg font-semibold mb-3 sm:mb-4">Urmărește-ne</h4>
       <div class="flex space-x-4"><a href="#" class="text-gray-300 hover:text-red-400 transition">Facebook</a> <a href="#" class="text-gray-300 hover:text-red-400 transition">Instagram</a> <a href="#" class="text-gray-300 hover:text-red-400 transition">TikTok</a>
       </div>
      </div>
