--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     </div>
    </div>
   </section><!-- Booking Calendar Section -->
-  <section class="py-12 md:py-16 bg-red-50">
+  <section id="calendar-section" class="py-12 md:py-16 bg-red-50">
    <div class="container mx-auto px-4">
     <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Rezervă vizita lui Moș Crăciun</h3>
     <div class="max-w-4xl mx-auto bg-white rounded-xl shadow-lg p-5 sm:p-6 md:p-8">
@@ -372,7 +372,7 @@
     </div>
    </div>
   </section><!-- Footer -->
-  <footer class="bg-gray-800 text-white py-12">
+  <footer id="contact-section" class="bg-gray-800 text-white py-12">
    <div class="container mx-auto px-4">
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
      <div>
