--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
       <!-- Contact + Rezervă -->
       <div class="flex items-center justify-end gap-2">
         <a href="#contact-section"
-           class="inline-flex items-center gap-1 text-xs md:text-sm text-gray-700 hover:text-red-600">
-          <span>📞</span><span>Contact</span>
+           class="inline-flex items-center gap-1 text-xs md:text-base text-gray-700 hover:text-red-600 px-2 py-1 md:px-4 md:py-2 rounded-full md:border md:border-red-600">
+          <span class="text-base md:text-xl">📞</span><span class="hidden md:inline">Contact</span>
         </a>
         <a href="#calendar-section"
-           class="inline-flex items-center gap-1 text-xs md:text-sm bg-red-600 text-white px-3 py-1 rounded-full hover:bg-red-700 transition">
-          <span>📅</span><span>Rezervă</span>
+           class="inline-flex items-center gap-1 text-xs md:text-base bg-red-600 text-white px-3 py-1 md:px-5 md:py-2 rounded-full hover:bg-red-700 transition">
+          <span class="text-base md:text-xl">📅</span><span class="hidden md:inline">Rezervă</span>
         </a>
       </div>
     </div>
@@ -162,7 +162,7 @@
    <div class="container mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-8">
     <div class="w-full md:w-1/2 md:pr-8 mb-8 md:mb-0">
      <h2 class="text-2xl sm:text-3xl md:text-5xl font-bold mb-4 md:mb-6" style="font-family: 'Poppins', sans-serif;">Adu magia Crăciunului la tine acasă</h2>
-     <p class="text-base sm:text-lg md:text-xl mb-6 md:mb-8 opacity-90" style="font-family: 'Open Sans', sans-serif;">Creează amintiri de neuitat cu cel mai autentic Moș Crăciun din România. Experiență magică garantată pentru copii și adulți.</p><button class="bg-white text-red-800 px-8 py-4 rounded-full text-lg font-semibold hover:bg-gray-100 transition transform hover:scale-105"> 🎁 Rezervă vizita lui Moș Crăciun </button>
+     <p class="text-base sm:text-lg md:text-xl mb-6 md:mb-8 opacity-90" style="font-family: 'Open Sans', sans-serif;">Creează amintiri de neuitat cu cel mai autentic Moș Crăciun din România. Experiență magică garantată pentru copii și adulți.</p><a href="#calendar-section" class="inline-flex items-center gap-2 bg-white text-red-800 px-4 py-2.5 md:px-6 md:py-3 rounded-full text-sm sm:text-base md:text-lg font-semibold hover:bg-gray-100 transition transform hover:scale-105">🎁 Rezervă vizita lui Moș Crăciun</a>
     </div>
     <div class="w-full md:w-1/2 flex justify-center">
      <div class="w-48 h-48 sm:w-64 sm:h-64 md:w-80 md:h-80 bg-white bg-opacity-20 rounded-full flex items-center justify-center"><span class="text-6xl sm:text-7xl md:text-9xl">🎅</span>
@@ -410,7 +410,7 @@
      <li>Poezii și povești interactive</li>
      <li>Sesiune foto nelimitată</li>
      <li>Deplasare în București</li>
-    </ul><button class="bg-red-600 text-white px-6 py-2 rounded-full hover:bg-red-700 transition"> Rezervă acum </button>
+    </ul><button class="bg-red-600 text-white px-6 py-2 rounded-full hover:bg-red-700 transition" onclick="goToCalendar('modal1')"> Rezervă acum </button>
    </div>
   </div>
   <div id="modal2" class="modal">
@@ -425,7 +425,7 @@
      <li>Distribuirea darurilor</li>
      <li>Fotografii cu fiecare copil</li>
      <li>Activități creative</li>
-    </ul><button class="bg-red-600 text-white px-6 py-2 rounded-full hover:bg-red-700 transition"> Rezervă acum </button>
+    </ul><button class="bg-red-600 text-white px-6 py-2 rounded-full hover:bg-red-700 transition" onclick="goToCalendar('modal2')"> Rezervă acum </button>
    </div>
   </div>
   <script>
