--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
       <div class="flex items-center justify-end gap-2">
         <a href="#contact-section"
            class="inline-flex items-center gap-1 text-xs md:text-base text-gray-700 hover:text-red-600 px-2 py-1 md:px-4 md:py-2 rounded-full md:border md:border-red-600">
-          <span class="text-base md:text-xl">📞</span><span class="hidden md:inline">Contact</span>
+          <span class="text-red-600 md:text-base md:text-xl">📞</span><span class="hidden md:inline">Contact</span>
         </a>
         <a href="#calendar-section"
            class="inline-flex items-center gap-1 text-xs md:text-base bg-red-600 text-white px-3 py-1 md:px-5 md:py-2 rounded-full hover:bg-red-700 transition">
-          <span class="text-base md:text-xl">📅</span><span class="hidden md:inline">Rezervă</span>
+          <span class="text-red-600 md:text-base md:text-xl">🗓️</span><span class="hidden md:inline">Rezervă</span>
         </a>
       </div>
     </div>
@@ -169,7 +169,11 @@
      </div>
     </div>
    </div>
-  </section><!-- Services Section -->
+  </section>
+  <div class="py-4 text-center text-red-800 text-sm md:text-base tracking-[0.25em]">
+    ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺
+  </div>
+<!-- Services Section -->
   <section class="py-16 bg-gray-50">
    <div class="container mx-auto px-4">
     <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Serviciile noastre magice</h3>
@@ -190,7 +194,11 @@
      </div>
     </div>
    </div>
-  </section><!-- Benefits Section -->
+  </section>
+  <div class="py-4 text-center text-red-800 text-sm md:text-base tracking-[0.25em]">
+    ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺
+  </div>
+<!-- Benefits Section -->
   <section class="py-16 bg-white">
    <div class="container mx-auto px-4">
     <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">De ce să alegi Moș Crăciunul nostru?</h3>
@@ -225,7 +233,11 @@
      </div>
     </div>
    </div>
-  </section><!-- About Section -->
+  </section>
+  <div class="py-4 text-center text-red-800 text-sm md:text-base tracking-[0.25em]">
+    ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺
+  </div>
+<!-- About Section -->
   <section class="py-12 md:py-16" style="background: linear-gradient(135deg, #8b0000 0%, #ffffff 100%);">
    <div class="container mx-auto px-4 flex items-center">
     <div class="w-full md:w-1/2 md:pr-8 mb-8 md:mb-0">
@@ -238,7 +250,11 @@
      <p class="text-base sm:text-lg leading-relaxed" style="font-family: 'Open Sans', sans-serif;">Cred că spiritul Crăciunului trăiește în fiecare zâmbet de copil și în fiecare moment de fericire împărtășit în familie. Să aducem împreună magia Crăciunului la tine acasă!</p>
     </div>
    </div>
-  </section><!-- Reviews Section -->
+  </section>
+  <div class="py-4 text-center text-red-800 text-sm md:text-base tracking-[0.25em]">
+    ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺
+  </div>
+<!-- Reviews Section -->
   <section class="py-16 bg-gray-50">
    <div class="container mx-auto px-4">
     <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Ce spun părinții și organizatorii</h3>
@@ -265,7 +281,11 @@
      </div>
     </div>
    </div>
-  </section><!-- FAQ Section -->
+  </section>
+  <div class="py-4 text-center text-red-800 text-sm md:text-base tracking-[0.25em]">
+    ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺
+  </div>
+<!-- FAQ Section -->
   <section class="py-16 bg-white">
    <div class="container mx-auto px-4">
     <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Întrebări frecvente</h3>
@@ -304,7 +324,11 @@
      </div>
     </div>
    </div>
-  </section><!-- Booking Calendar Section -->
+  </section>
+  <div class="py-4 text-center text-red-800 text-sm md:text-base tracking-[0.25em]">
+    ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺
+  </div>
+<!-- Booking Calendar Section -->
   <section id="calendar-section" class="py-12 md:py-16 bg-red-50">
    <div class="container mx-auto px-4">
     <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-800" style="font-family: 'Poppins', sans-serif;">Rezervă vizita lui Moș Crăciun</h3>
@@ -371,7 +395,11 @@
      </div>
     </div>
    </div>
-  </section><!-- Footer -->
+  </section>
+  <div class="py-4 text-center text-red-800 text-sm md:text-base tracking-[0.25em]">
+    ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺ ✷ ✺
+  </div>
+<!-- Footer -->
   <footer id="contact-section" class="bg-gray-800 text-white py-12">
    <div class="container mx-auto px-4">
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -430,7 +458,7 @@
   </div>
   <script>
         function openModal(modalId) {
-            document.getElementById(modalId).style.display = 'block';
+            document.getElementById(modalId).style.display = 'flex';
         }
 
         function closeModal(modalId) {
